# docs/swagger.json
@@ -26,9 +26,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "用户模块"
+                    "User module"
                 ],
-                "summary": "账号登录",
+                "summary": "Account login",
                 "parameters": [
                     {
                         "description": "params",
@@ -52,7 +52,7 @@
         },
         "/register": {
             "post": {
-                "description": "目前只支持邮箱登录",
+                "description": "Currently only supports email login",
                 "consumes": [
                     "application/json"
                 ],
@@ -60,9 +60,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "用户模块"
+                    "User module"
                 ],
-                "summary": "用户注册",
+                "summary": "User registration",
                 "parameters": [
                     {
                         "description": "params",
@@ -98,14 +98,147 @@
                     "application/json"
                 ],
                 "tags": [
-                    "用户模块"
+                    "User module"
                 ],
-                "summary": "获取用户信息",
+                "summary": "Get user information",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/core_service_api_v1.GetProfileResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User module"
+                ],
+                "summary": "Update user information",
+                "parameters": [
+                    {
+                        "description": "params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/core_service_api_v1.UpdateProfileRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/core_service_api_v1.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/me": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User module"
+                ],
+                "summary": "Get user information",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/core_service_api_v1.User"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User module"
+                ],
+                "summary": "Get user information",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/core_service_api_v1.User"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User module"
+                ],
+                "summary": "Delete user information",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/core_service_api_v1.User"
                         }
                     }
                 }
@@ -130,12 +263,12 @@
         "core_service_api_v1.GetProfileResponseData": {
             "type": "object",
             "properties": {
-                "Username": {
-                    "type": "string",
-                    "example": "alan"
-                },
                 "userId": {
                     "type": "string"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "alan"
                 }
             }
         },
@@ -203,6 +336,36 @@
                 },
                 "data": {},
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "core_service_api_v1.UpdateProfileRequest": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "1234@gmail.com"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "alan"
+                }
+            }
+        },
+        "core_service_api_v1.User": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "username": {
                     "type": "string"
                 }
             }
